Bug 1026336 - Fix warnings in content/media/webrtc and mark FAIL_ON_WARNINGS. r=jesup